# mt-pak-extract

./: .gitignore  Cargo.toml  LICENSE  README.md  assets.json  flake.nix
config/: butter_cargo.yaml  butter_production.yaml
csharp/AssetEditor/: AssetEditor.csproj  CargoConfig.cs  CargoEditor.cs  ProductionConfig.cs  ProductionEditor.cs  Program.cs
csharp/CargoExtractor/: CargoExtractor.csproj  Program.cs
docs/: custom_models.md
scripts/: aggregate_to_sqlite.py  extract-assets.sh
src/: main.rs  repack.rs  verify_pak.rs
