[package]
name = "mt-pak-extract"
version = "0.1.0"
edition = "2024"

[dependencies]
unreal_asset = { git = "https://github.com/AstroTechies/unrealmodding", branch = "main" }
unreal_pak = { git = "https://github.com/AstroTechies/unrealmodding", branch = "main" }
repak = { git = "https://github.com/trumank/repak", features = ["encryption", "compression", "oodle"] }
aes = "0.8"
dotenvy = "0.15"
hex = "0.4"
byteorder = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
